# publico

./: LICENSE  README.md  pyproject.toml
notebooks/: eda.ipynb
scripts/: download_data.sh  format4hf.py  merge_publico.py  parse_publico.py  translate.py  translate_publico.py
src/: __init__.py  contants.py  data.py  db.py  translator.py
tests/: long_long_text.txt  long_text.txt  long_text_en.txt  test_db.py  test_translate.py
