[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
description = "Code to translate Publico news into several languages."
readme = "README.md"
version = "0.0.1"
dependencies = [
    "deep_translator==1.11.4",
    "pymongo==4.6.2",
    "python-dotenv==1.0.1",
    "fire==0.6.0",
    "tqdm==4.66.2"
]
requires-python = "~=3.11"

[project.optional-dependencies]
test = ["pytest==8.1.1"]
lint = ["ruff"]
